# LocheGSplicer

./: CMakeLists.txt  README.txt
data/: ColorBase.gcode  ColorPatern.gcode
inc/: Constants.h  GCodeBuilder.h  GCodeObject.h  GCodeParser.h  GCodeSplicer.h  MainWindow.h  PreferencesDialog.h  VisualizerView.h  Window.h  qtlogo.h
installer/: Installer.nsi  LocheGSplicer.bat  LocheGSplicerDebug.bat
src/: GCodeBuilder.cpp  GCodeObject.cpp  GCodeParser.cpp  GCodeSplicer.cpp  Main.cpp  MainWindow.cpp  PreferencesDialog.cpp  VisualizerView.cpp  Window.cpp  qtlogo.cpp
test/: Simple.KISS.gcode  Simple.Slic3r.gcode
